--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,10 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
 /* Customize the body background color*/
 @layer base {
-    body {
-      @apply bg-black;
-    }
+  body {
+    @apply bg-yellow-50;
   }
+  button {
+    @apply bg-yellow-500 text-white font-bold py-2 px-4 rounded;
+  }
+}
