--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@
 /* Customize the body background color*/
 @layer base {
   body {
-    @apply bg-gray-900;
+    /* @apply bg-gray-900; */
   }
   button {
     @apply bg-yellow-500;
